# test-bot-currency

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: bootstrap.py  main.py
app/config/: logger.py  setting.py
app/filters/: filter_convert.py
app/handler/: start_handle.py  utils.py
app/logic/: xml_service.py
app/logic/upload_job/: jobs.py  remote_download_service.py  xml_service.py
app/middleware/: logging.py  storage.py  throttling.py
app/storage/: redis_storage.py
local_storage/: dump.rdb
local_storage/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
