[tool.poetry]
name = "test-bot-currency"
version = "0.1.0"
description = ""
authors = ["Keni13-Coder <vladmoldovanov03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.10.0"
redis = "^5.0.7"
httpx = "^0.27.0"
apscheduler = "^3.10.4"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
